tests/burghard/fail/block_comments/empty_block.wsa
; The line comment takes precedence
{--}
